Table languages {
  id varchar(64)
  lang_code varchar(2)

  indexes {
    id [pk] // primary key
    lang_code [unique]
  }
}

Table users {
  id varchar(64)
  client varchar(64)
  language_id varchar(64)
  study_subject varchar

  indexes {
    (id, client) [pk] // composite primary key
    language_id
  }
}

Table contexts {
  id integer
  context varchar
  language_id varchar(64)

  indexes {
    id [pk] // primary key
    language_id
  }
}

Table strategies {
  id varchar

  indexes {
    id [pk] // primary key
  }
}

Table strategy_translations {
  id varchar
  language_id varchar(64)
  strategy varchar
  name varchar
  description varchar


  indexes {
    id [pk] // primary key
    strategy
    language_id
  }
}

Table state {
  id varchar(64)
  user_id varchar(64)
  user_client varchar(64)
  interview_completed boolean
  current_turn integer
  current_context integer
  strategy_for_frequency varchar
  current_conversation_step varchar(32)

  indexes {
    id [pk] // primary key
    (user_id, user_client)
    current_context
  }
}

Table conversation_completed_contexts {
  conversation_id varchar(64)
  completed_context_id integer

  indexes {
    (conversation_id, completed_context_id) [pk] // composite primary key
  }
}

Table interview_answers {
  id varchar(64)
  user_id varchar(64)
  user_client varchar(64)
  context integer
  strategy varchar
  turn integer
  message varchar
  conversation_step varchar(32)
  message_time timestamp

  indexes {
    id [pk] // primary key
    (user_id, user_client)
    context
    strategy
  }
}

Table user_strategies {
  id varchar(64)
  user_id varchar(64)
  user_client varchar(64)
  interview_answer_id varchar(64)
  context integer
  strategy varchar
  frequency integer

  indexes {
    id [pk] // primary key
    (user_id, user_client)
    context
    strategy
  }
}

Table llm_responses {
  id varchar(64)
  user_id varchar(64)
  user_client varchar(64)
  message varchar
  context integer
  strategy varchar
  turn integer
  conversation_step varchar(32)
  message_time timestamp

  indexes {
    id [pk] // primary key
    (user_id, user_client)
    context
    strategy
  }
}

Table strategy_evaluations {
  id varchar(64)
  user_id varchar(64)
  user_client varchar(64)
  strategy varchar
  SU boolean
  SF float
  SC float

  indexes {
    id [pk] // primary key
    (user_id, user_client)
    strategy
  }
}

Ref: users.language_id > languages.id

Ref: contexts.language_id > languages.id

Ref: strategy_translations.strategy > strategies.id
Ref: strategy_translations.language_id > languages.id

Ref: state.(user_id, user_client) > users.(id, client)
Ref: state.current_context > contexts.id
Ref: state.strategy_for_frequency > strategies.id

Ref: conversation_completed_contexts.conversation_id > state.id
Ref: conversation_completed_contexts.completed_context_id > contexts.id

Ref: interview_answers.(user_id, user_client) > users.(id, client)
Ref: interview_answers.context > contexts.id
Ref: interview_answers.strategy > strategies.id

Ref: user_strategies.(user_id, user_client) > users.(id, client)
Ref: user_strategies.interview_answer_id > interview_answers.id
Ref: user_strategies.context > contexts.id
Ref: user_strategies.strategy > strategies.id

Ref: llm_responses.(user_id, user_client) > users.(id, client)
Ref: llm_responses.context > contexts.id
Ref: llm_responses.strategy > strategies.id

Ref: strategy_evaluations.(user_id, user_client) > users.(id, client)
Ref: strategy_evaluations.strategy > strategies.id
